addind action for retreiving all parent from db & ending with options actions

--- a/MySchool/Views/Shared/_Layout.cshtml
+++ b/MySchool/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Inscription" asp-action="AddParent">Parents</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Option" asp-action="Index">Parents</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Option" asp-action="Index">Options</a>
                         </li>
                     </ul>
                 </div>
