--- a/MySchool/Views/Option/Index.cshtml
+++ b/MySchool/Views/Option/Index.cshtml
@@ -1,6 +1,47 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<MySchool.Models.Option>
 @{
+    ViewData["Title"] = "Options Disponible";
 }
 
+    <h1>Bienvenu dans notre etablissement</h1>
+
+    <div class="jumbotron">
+        <p class="text-black-50">
+            ici vous trouverez la liste valide des section organisees chez nous , nous esperons que cela
+            vous permettra d'avoir une idee claire de l'option ou la section que suivra votre ou vos enfants
+            ici chez nous.
+        </p>
+    </div>
+
+    <div class="container">
+        <table class="table table-striped">
+            <tr>
+                <th>#</th>
+                <th>Sections</th>
+                <th>Nombres des Cours</th>
+                <th>Action</th>
+            </tr>
+           @if (Model.Count() > 0)
+           {
+               @foreach (var item in Model)
+               {
+                   <tr>
+                       <td>@Html.DisplayFor(option => item.OptionID)</td>
+                       <td>@Html.DisplayFor(option => item.Designation)</td>
+                       <td><span class="badge-info col-sm-3">@item.Cours.Count()</span> </td>
+                       <td>
+                           <a asp-controller="Option" asp-action="Details" asp-route-id="@item.OptionID" class="card-link">Voir</a>
+                       </td>
+                   </tr>
+               }
+           }
+           else
+           {
+               <p>Pas d'options...</p>
+           }
+        </table>
+    </div>
+    <div>
+        <a asp-action="AddOption" asp-controller="Option" class="nav-link">Nouvelle Option</a>
+    </div>
+    
