--- a/MySchool/Views/Shared/_Layout.cshtml
+++ b/MySchool/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Inscription" asp-action="Index">Inscription</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Inscription" asp-action="AddParent">Parents</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inscription" asp-action="Parents">Parents</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Option" asp-action="Index">Options</a>
