--- a/MySchool/Views/Inscription/Parents.cshtml
+++ b/MySchool/Views/Inscription/Parents.cshtml
@@ -53,5 +53,5 @@
     </div>
 
     <div>
-        <a asp-action="AddParent">Nouvelle Inscription</a>
+        <a asp-action="Index" asp-controller="Inscription">Inscrire</a>
     </div>
