--- a/MySchool/Views/Shared/_Layout.cshtml
+++ b/MySchool/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Inscription" asp-action="Index">Inscription</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inscription" asp-action="AddParent">Inscription</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Inscription" asp-action="Parents">Parents</a>
