--- a/MySchool/Views/Shared/_Layout.cshtml
+++ b/MySchool/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Option" asp-action="Index">Options</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Prof" asp-action="Index">Enseignants</a>
+                        </li>
                     </ul>
                 </div>
             </div>
