--- a/MySchool/Views/Prof/Index.cshtml
+++ b/MySchool/Views/Prof/Index.cshtml
@@ -1,8 +1,57 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model MySchool.Models.Enseignant
 @{
+    ViewData["Title"] = "Enseignants";
 }
 
 
-    <h1>Enregistrer un Nouvel enseignant</h1>
+<h1>Enregistrer un Nouvel enseignant</h1>
+<div class="jumbotron">
+    <p>
+        Ajout un nouvel enseignant pour lui assigner un cours donner car il ne peut y avoir un cours sans ensiegnant,
+        voila pourquoi vous devez imperativement ajouter un nouvel enseignant pour chaque nouveau
+        cours enn vu, cela permet d'eviter d'avoir des cours sans assignation des d'enseignant.
+    </p>
+</div>
+
+
+<div class="container col-6">
+    <form method="post" asp-action="Add">
+        <div asp-validation-summary="ModelOnly"></div>
+        <div class="form-group">
+            <label asp-for="FirstName" class="custom-control-label font-weight-bold"></label>
+            <input type="text" asp-for="FirstName" class="form-control" placeholder="Prenom du parent/Tuteur" />
+            <span asp-validation-for="FirstName"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="LastName" class="custom-control-label font-weight-bold"></label>
+            <input type="text" asp-for="LastName" class="form-control" placeholder="Nom Complet du parent / tuteur" />
+            <span asp-validation-for="LastName"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Email" class="custom-control-label font-weight-bold"></label>
+            <input type="text" asp-for="Email" class="form-control" placeholder="Adresse Email du parent/ Tuteur" />
+            <span asp-validation-for="Email"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="PhoneNumber" class="custom-control-label font-weight-bold"></label>
+            <input type="text" asp-for="PhoneNumber" class="form-control" placeholder="Numero de telephone du parent / tuteur" />
+            <span asp-validation-for="PhoneNumber"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Option" class="custom-control-label font-weight-bold"></label>
+            <select asp-for="OptionID" class="form-control" asp-items="ViewBag.OptionNameSL">
+                <option value="">---Choisissez L'option---</option>
+            </select>
+            <span asp-validation-for="Option"></span>
+        </div>
+        <div class="form-group justify-content-xl-center">
+            <input type="submit" value="Valider & Assigner un cours" class="btn btn-primary" />
+            <a asp-controller="Home" asp-action="Index" class="nav-link text-danger">Annuler</a>
+        </div>
+    </form>
+</div>
+
+
+@section scripts{
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+}
