--- a/MySchool/Views/Prof/ListOfProf.cshtml
+++ b/MySchool/Views/Prof/ListOfProf.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<MySchool.Models.Enseignant>
 @{
+    ViewData["Title"] = "Liste d'enseignants";
 }
 
 <h1>List des enseignants disponible</h1>
