fending with data diplaying on the details page of enseignant

--- a/MySchool/Views/Prof/ListOfProf.cshtml
+++ b/MySchool/Views/Prof/ListOfProf.cshtml
@@ -37,7 +37,7 @@
                         <td>Pas de cours dispenser</td>
                     }
                     <td>
-                        <a asp-action="DetailsParents" asp-controller="Inscription" asp-route-id="@item.EnseignantID" class="nav-link">Details</a>
+                        <a asp-action="DetailDuProf" asp-controller="Prof" asp-route-id="@item.EnseignantID" class="nav-link">Details</a>
                     </td>
                 </tr>
             }
