--- a/MySchool/Views/Shared/_Layout.cshtml
+++ b/MySchool/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Prof" asp-action="ListOfProf">Enseignants</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cours" asp-action="Index">Cours</a>
+                        </li>
                     </ul>
                 </div>
             </div>
