--- a/MySchool/Views/Inscription/Index.cshtml
+++ b/MySchool/Views/Inscription/Index.cshtml
@@ -41,7 +41,7 @@
         <div class="form-group">
             <label asp-for="Parent" class="custom-control-label font-weight-bold"></label>
             <select asp-for="ParentID" class="form-control" asp-items="ViewBag.ParentsSL">
-                <option value="">---Choisissez L'option---</option>
+                <option value="">---Choisissez Le tuteur---</option>
             </select>
             <span asp-validation-for="Option"></span>
         </div>
