--- a/MySchool/Views/Inscription/AddParent.cshtml
+++ b/MySchool/Views/Inscription/AddParent.cshtml
@@ -37,6 +37,11 @@
             <input type="text" asp-for="Phone" class="form-control" placeholder="Numero de telephone du parent / tuteur" />
             <span asp-validation-for="Phone"></span>
         </div>
+        <div class="form-group">
+            <label asp-for="AdresseTuteur" class="custom-control-label font-weight-bold"></label>
+            <input type="text" asp-for="AdresseTuteur" class="form-control" placeholder="Numero de telephone du parent / tuteur" />
+            <span asp-validation-for="AdresseTuteur"></span>
+        </div>
        
         <div class="form-group justify-content-xl-center">
             <input type="submit" value="Valider & inscrire" class="btn btn-primary" />
