adding method for updating parent

--- a/MySchool/Views/Inscription/DetailsParents.cshtml
+++ b/MySchool/Views/Inscription/DetailsParents.cshtml
@@ -36,6 +36,12 @@
         </div>
         <div class="col-md-8">
             <div class="form-group">
+                <label class="font-weight-bold">Adresse :</label>
+                <label>@Html.DisplayFor(p => parents.AdresseTuteur)</label>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div class="form-group">
                 <label class="font-weight-bold">Enfants :</label>
                 <label>@parents.Enfants.Count()</label>
             </div>
