--- a/MySchool/Views/Inscription/Index.cshtml
+++ b/MySchool/Views/Inscription/Index.cshtml
@@ -52,6 +52,10 @@
     </form>
 </div>
 
+<div>
+    <a asp-action="AddParent" asp-controller="Inscription" class="nav-link">Enregistrer parent</a>
+</div>
+
 
 @section scripts{
     @await Html.PartialAsync("_ValidationScriptsPartial")
