--- a/MySchool/Views/Inscription/AddParent.cshtml
+++ b/MySchool/Views/Inscription/AddParent.cshtml
@@ -39,7 +39,7 @@
         </div>
         <div class="form-group">
             <label asp-for="AdresseTuteur" class="custom-control-label font-weight-bold"></label>
-            <input type="text" asp-for="AdresseTuteur" class="form-control" placeholder="Numero de telephone du parent / tuteur" />
+            <input type="text" asp-for="AdresseTuteur" class="form-control" placeholder="Adresse physique du parent / tuteur" />
             <span asp-validation-for="AdresseTuteur"></span>
         </div>
        
