--- a/MySchool/Views/Inscription/DetailsParents.cshtml
+++ b/MySchool/Views/Inscription/DetailsParents.cshtml
@@ -46,6 +46,12 @@
                 <label>@parents.Enfants.Count()</label>
             </div>
         </div>
+        <div class="col-md-8">
+            <div class="form-group">
+                <a class="btn btn-primary" asp-action="UpdateParent" asp-controller="Inscription" asp-route-id="@parents.ParentID">Modifier</a>
+                
+            </div>
+        </div>
     </div>
 }
 
