--- a/MySchool/Views/Option/Index.cshtml
+++ b/MySchool/Views/Option/Index.cshtml
@@ -19,6 +19,7 @@
                 <th>#</th>
                 <th>Sections</th>
                 <th>Nombres des Cours</th>
+                <th>Nombres d'eleves</th>
                 <th>------</th>
             </tr>
            @if (Model.Count() > 0)
@@ -29,6 +30,7 @@
                        <td>@Html.DisplayFor(option => item.OptionID)</td>
                        <td>@Html.DisplayFor(option => item.Designation)</td>
                        <td><span class="badge-info col-sm-3">@item.Cours.Count()</span> </td>
+                       <td><span class="badge-info col-sm-3">@item.Enfants.Count()</span> </td>
                        <td>
                            <a asp-controller="Option" asp-action="Details" asp-route-id="@item.OptionID" class="card-link">Voir</a>
                        </td>
@@ -37,7 +39,12 @@
            }
            else
            {
-               <p>Pas d'options...</p>
+               <tr>
+                   <td>
+                       <p>Pas d'options...</p>
+                   </td>
+               </tr>
+           
            }
         </table>
     </div>
