--- a/MySchool/Views/Inscription/AddParent.cshtml
+++ b/MySchool/Views/Inscription/AddParent.cshtml
@@ -50,6 +50,10 @@
     </form>
 </div>
 
+<div>
+    <a asp-action="Index">Deja Parent? Inscrivez sans probleme</a>
+</div>
+
 
 @section scripts{
     @await Html.PartialAsync("_ValidationScriptsPartial")
